--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,5 +12,6 @@
  *= require jquery.fileupload-ui
  *= require jquery.ui.all
  *= require hydra-editor/hydra-editor
+ *= require font-awesome
  *= require_tree .
  */
