--- a/app/views/pul_store/lae/folders/_breadcrumb.html.erb
+++ b/app/views/pul_store/lae/folders/_breadcrumb.html.erb
@@ -1,8 +1,7 @@
 <ul class="breadcrumb">
-  <li><a href="/lae">Lae Home</a> <span class="divider">/</span></li>
+  <li><a href="/lae">Lae Home</a></li>
   <li>
   	<a href="<%= lae_box_path @folder.box_id %>">Box <%= lae_folder_get_box_number @folder.box_id %></a> 
-  	<span class="divider">/</span>
   </li>
   <li class="active">Folder <%= @folder.physical_number %></li>
 </ul>
