--- a/app/views/layouts/lae.html.erb
+++ b/app/views/layouts/lae.html.erb
@@ -17,31 +17,28 @@
 
   </head>
   <body class="<%= render_body_class %>" data-no-turbolink>
-  <%= render :partial => 'shared/lae/header_navbar' %>
+    <%= render :partial => 'shared/lae/header_navbar' %>
 
-  <div id="ajax-modal" class="modal hide fade" tabindex="-1"></div>
+    <div id="ajax-modal" class="modal hide fade" tabindex="-1"></div>
 
-<!-- /container -->
-  <div id="main-container" class="container">
-            <!-- Top bar -->
-            <div id="search-found" class="row hidden-phone">
-            </div>
-            <!-- /Top bar -->
-                  <div class="row">
-                      <div class="span12">
-                        <div id="main-flashes">
-                          <%= render :partial=>'/flash_msg' %>
-                        </div>
-                      </div>
-                  </div>
+    <!-- /container -->
+    <div id="main-container" class="container">
+      <!-- Top bar -->
+      <div id="search-found" class="row hidden-phone">
+      </div>
+      <div class="row">
+        <div class="col-md-12">
+          <div id="main-flashes">
+            <%= render :partial=>'/flash_msg' %>
+          </div>
+        </div>
+      </div>
 
-                  <div class="row">
-                       <%= yield %>
-                       </div>
-                                     <%= render :partial => 'shared/footer' %>
-
-</div>
-
-
-    </body>
+      <!-- /main-content -->
+      <div class="row">
+        <%= yield %>
+      </div>
+    </div>
+    <%= render :partial => 'shared/footer' %>
+  </body>
 </html>
