--- a/app/views/pul_store/lae/boxes/_breadcrumb.html.erb
+++ b/app/views/pul_store/lae/boxes/_breadcrumb.html.erb
@@ -1,8 +1,7 @@
 <ul class="breadcrumb">
-  <li><a href="/lae">Lae Home</a> <span class="divider">/</span></li>
+  <li><a href="/lae">Lae Home</a></li>
   <li>
   	<a href="/lae/boxes">Lae Boxes</a> 
-  	<span class="divider">/</span>
   </li>
   <li class="active">Box <%= @box.physical_number %></li>
 </ul>
