--- a/app/views/pul_store/lae/boxes/_brief_form.erb
+++ b/app/views/pul_store/lae/boxes/_brief_form.erb
@@ -1,21 +1,29 @@
-<%= form_for(@box) do |b| %>
+<%= form_for(@box, html: {:class => 'form-horizontal lae-box'}) do |b| %>
   <% if @box.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@box.errors.count, "error") %> prohibited this Box from being saved:</h2>
-      <ul>
-      <% @box.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
-      </ul>
+    <div class="row">
+      <div id="error_explanation" class="col-sm-6 col-sm-offset-3">
+        <h2><%= pluralize(@box.errors.count, "error") %> prohibited this Box from being saved:</h2>
+        <ul>
+        <% @box.errors.full_messages.each do |msg| %>
+          <li><%= msg %></li>
+        <% end %>
+        </ul>
+      </div>
     </div>
   <% end %>
 
-  <div class="field">
-    <%= b.label "Scan a #{:barcode}" %><br>
-    <%= b.text_field :barcode, class: 'barcode'  %>
+  <div class="row">
+    <div class="form-group">
+      <%= b.label "Scan a #{:barcode}", class: 'control-label col-sm-3' %>
+      <div class="col-xs-6">
+        <%= b.text_field :barcode, class: 'barcode form-control input-lg', placeholder: "Barcode"  %>
+      </div>
+    </div>
   </div>
 
-   <div class="actions">
-      <%= b.submit %>
+  <div class="row">
+   <div class="col-sm-3 col-sm-offset-3 actions">
+      <%= b.submit :value => "Create Box", :class => 'btn btn-primary btn-lg' %>
    </div>
+  </div>
 <% end %>
