--- a/app/views/pul_store/lae/boxes/_form.html.erb
+++ b/app/views/pul_store/lae/boxes/_form.html.erb
@@ -1,110 +1,123 @@
-<div class="row">
-<%= form_for(@box, :html => {:class => "form form-horizontal"}) do |b| %>
-  <% if @box.errors.any? %>
-    <div class="row">
-      <div class="span6 offset2" id="error_explanation">
-      <h2><%= pluralize(@box.errors.count, "error") %> prohibited this Box from being saved:</h2>
-      <ul>
-      <% @box.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
+  <%= form_for(@box, :html => {:class => "form form-horizontal"}) do |b| %>
+    <% if @box.errors.any? %>
+      <div class="row">
+        <div class="col-md-6 col-md-offset-2" id="error_explanation">
+        <h2><%= pluralize(@box.errors.count, "error") %> prohibited this Box from being saved:</h2>
+        <ul>
+        <% @box.errors.full_messages.each do |msg| %>
+          <li><%= msg %></li>
+        <% end %>
+        </ul>
+        </div>
+      </div>
+    <% end %>
+
+  <!-- :full,
+  :tracking_number,
+  :shipped_date, # checkbox, stamp if set
+  :received_date, # checkbox, stamp if set
+  :barcode,
+  :error_note -->
+    <div class="col-md-6">
+      <div class="form-group">
+          <%= b.label "State",  :class=>"control-label col-sm-3" %>
+          <div class="col-sm-6">
+            <%= render :partial => 'shared/lae/workflow_state_badge', locals: {object: @box} %>
+          </div>
+        </div>
+      <div class="form-group">
+        <%= b.label :barcode, :class => 'control-label col-sm-3' %>
+        <div class="col-sm-9">
+          <%= b.text_field :barcode, class: 'barcode form-control' %>
+        </div>
+      </div>
+      <div class="form-group">
+        <%= b.label :error_note, :class => 'control-label col-sm-3' %>
+        <div class="col-sm-9">
+          <%= b.text_area :error_note, class: "form-control" %>
+        </div>
+      </div>
+      <div class="form-group">
+        <div class="col-sm-9 col-sm-offset-3">
+          <div class="checkbox">
+          <%= b.check_box :full, { class: 'checkbox' }, "true", "false" %>
+          <%= b.label 'Mark Box Full' %>
+          </div>
+        </div>
+      </div>
+  </div>
+  <div class="col-md-6">
+   <div class="form-group">
+      <%= b.label :tracking_number, :class => 'control-label col-sm-3' %>
+      <div class="col-sm-9">
+        <%= b.text_field :tracking_number, class: 'tracking_number form-control' %>
+      </div>
+    </div>
+    <div class="form-group">
+      <%= b.label :shipped_date, :class => 'control-label col-sm-3' %>
+      <div class="col-sm-9">
+        <%= b.text_field :shipped_date, :class => 'datepicker input-small form-control' %>
+      </div>
+    </div>
+    <div class="form-group">
+      <%= b.label :received_date, :class => 'control-label col-sm-3' %>
+      <div class="col-sm-9">
+        <%= b.text_field :received_date, :class => 'datepicker input-small form-control' %>
+      </div>
+    </div>
+    <div class="form-group actions">
+      <div class="col-sm-12">
+        <%= b.submit :value => "Update Box", :class => 'btn btn-primary' %>
+      </div>
+    </div>
+  </div>
+  <% end %>
+  <div class="btn-group">
+    <%= link_to("Add Folder to Box", '#', 'data-target' => "#new-folder-modal", 'data-toggle' => 'modal', :class => "btn btn-success new-model", :title => "Add a New Folder to Box") %>
+    <%= link_to("Attach Drive to Box", '#', 'data-target' => "#new-hard-drive-modal", 'data-toggle' => 'modal', :class => "btn btn-success new-model", :title => "Attach Drive to Box") %>
+  </div>
+
+  <div id="lae-box-folder-options" class="col-md-12">
+      <h3>
+       <% if(@box.folders.empty?) %>
+        <span id="folder-count">No&nbsp;</span>
+      <% else %>
+        <span id="folder-count"><%= @box.folders.size %>&nbsp;</span>
       <% end %>
-      </ul>
+      Folders</h3>
+      <div class="folder-options">
+        <%= link_to "Show All Folders", "#{lae_box_path}/folders", remote: true, method: :get, :class => "btn btn-default show-all-folders" %>
       </div>
     </div>
-  <% end %>
-
-<!-- :full,
-:tracking_number,
-:shipped_date, # checkbox, stamp if set
-:received_date, # checkbox, stamp if set
-:barcode,
-:error_note -->
-  <div class="span5">
-  <div class="control-group">
-      <%= b.label "State",  :class=>"control-label" %>
-      <div class="controls">
-        <%= render :partial => 'shared/lae/workflow_state_badge', locals: {object: @box} %>
-      </div>
-    </div>
-  <div class="control-group">
-    <%= b.label :barcode, :class => 'control-label' %>
-    <div class="controls">
-      <%= b.text_field :barcode, class: 'barcode' %>
-    </div>
-  </div>
-  <div class="control-group">
-    <%= b.label :error_note, :class => 'control-label' %>
-    <div class="controls">
-      <%= b.text_area :error_note %>
-    </div>
-  </div>
-  <div class="control-group">
-    <%= b.label 'Mark Box Full', :class => 'control-label' %>
-    <div class="controls">
-      <%= b.check_box :full, { class: 'checkbox' }, "true", "false" %>
-    </div>
-  </div>
-</div>
-<div class="span3">
- <div class="control-group">
-    <%= b.label :tracking_number, :class => 'control-label' %>
-    <div class="controls">
-      <%= b.text_field :tracking_number, class: 'tracking_number' %>
-    </div>
-  </div>
-  <div class="control-group">
-    <%= b.label :shipped_date, :class => 'control-label' %>
-    <div class="controls">
-      <%= b.text_field :shipped_date, :class => 'datepicker input-small' %>
-    </div>
-  </div>
-  <div class="control-group">
-    <%= b.label :received_date, :class => 'control-label' %>
-    <div class="controls">
-      <%= b.text_field :received_date, :class => 'datepicker input-small' %>
-    </div>
-  </div>
-  <div class="control-group actions">
-    <div class="controls">
-      <%= b.submit :value => "Update Box", :class => 'btn btn-primary' %>
-    </div>
-  </div>
-</div>
-<% end %>
-</div>
-<!-- end row -->
-<div class="row">
-<div class="span9 offset1">
-  <h3>
-   <% if(@box.folders.empty?) %>
-    <span id="folder-count">No&nbsp;</span>
-  <% else %>
-    <span id="folder-count"><%= @box.folders.size %>&nbsp;</span>
-  <% end %>
-  Folders</h3>
-<!-- start modal -->
-   <div class="form-control">
-    <%= link_to("Add Folder to Box", '#', 'data-target' => "#new-folder-modal", 'data-toggle' => 'modal', :class => "btn btn-success lae-new pull-left new-model", :title => "Add a New Folder to Box") %>
-  </div>
-      <div id="new-folder-modal" class="modal fade" data-backdrop="static">
-        <div class="modal-header">
-          <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-          <h3>Add a Folder to Box <%= @box.physical_number unless @box.barcode.nil? %></h3>
-        </div>
-        <div class="modal-body">
-          <%= render :partial => 'pul_store/lae/folders/ajax_form', locals: { box: @box } %>
+  <!-- start modal -->
+        <div id="new-folder-modal" class="modal fade well" backdrop="static" role="dialog" aria-hidden="true">
+          <div class="modal-dialog modal-lg">
+            <div class="modal-content">
+              <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                <h3 class="modal-title">Add a Folder to Box <%= @box.physical_number unless @box.barcode.nil? %></h3>
+              </div>
+              <%= render :partial => 'pul_store/lae/folders/ajax_form', locals: { box: @box } %>
+            </div>
         </div>
       </div>
-    </div>
-  <!-- end Modal -->
-</div>
-</div>
-<div class="row">
-  <div class="span9 offset1">
-    <%= render :partial => 'folders_table' %>
-  </div>
-</div>
+    
+    <!-- end Modal -->
 
+
+    <!-- start Drive Modal -->
+       <div id="new-hard-drive-modal" class="modal fade well" backdrop="static" role="dialog" aria-hidden="true">
+          <div class="modal-dialog modal-lg">
+            <div class="modal-content">
+              <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                <h3 class="modal-title">Attach a Drive to Box <%= @box.physical_number unless @box.barcode.nil? %></h3>
+              </div>
+              <%= render :partial => 'pul_store/lae/hard_drives/ajax_form', locals: { box: @box } %>
+            </div>
+        </div>
+      </div>
+    <!-- end Drive Modal -->
 
 
 
