--- a/app/views/pul_store/lae/boxes/edit.html.erb
+++ b/app/views/pul_store/lae/boxes/edit.html.erb
@@ -1,23 +1,34 @@
-<div class="row">
-  <div class="span9" id="lae-head">
-    <div class="row">
-      <div class="span6">
-        <h1 class="lae-head"><%= @page_title%></h1>
+<div class="container" id="main-container">
+  <div class="row">
+    <div class="col-md-12 .col-md-offset-3" id="lae-head">
+      <div class="row">
+        <div class="span6">
+          <h1 class="lae-head"><%= @page_title%></h1>
+        </div>
       </div>
     </div>
   </div>
-</div>
-<div class="row">
-  <%= render :partial => 'breadcrumb' %>
-</div>
+  <div class="row">
+    <%= render :partial => 'breadcrumb' %>
+  </div>
 
-<div class="row">
-  <div id="content" class="span9 show-document">
-    <%= render 'form' %>
-    <ul class="nav nav-pills">
-      <li><%= link_to 'View Box', @box %></li>
-      <li><%= link_to 'Return to Boxes', lae_boxes_path %></li>
-    </ul>
+  <div class="row">
+    <div id="content" class="col-md-9 show-document">
+      <div class="row">
+        <%= render 'form' %>
+      </div>
+      <div class="row">
+        <div class="col-md-12">
+          <%= render :partial => 'folders_table' %>
+        </div>
+      </div>
+      <div class="row">
+        <ul class="nav nav-pills">
+          <li><%= link_to 'View Box', @box %></li>
+          <li><%= link_to 'Return to Boxes', lae_boxes_path %></li>
+        </ul>
+      </div>
+    </div>
   </div>
 </div>
 
