--- a/app/views/pul_store/lae/folders/_pages_list.html.erb
+++ b/app/views/pul_store/lae/folders/_pages_list.html.erb
@@ -4,7 +4,7 @@
 <% @pages_list.each do |page| %>
 <li class="span4">
     <a href="<%= pul_store_page_path(page['id']) %>" class="thumbnail">
-      <img data-src="holder.js/300x200" alt="">
+      <img data-sort-order="<%= page['desc_metadata__sort_order_isi'] %>" data-src="holder.js/300x200" alt="">
     </a>
   </li>
 <% end %>
