--- a/app/views/pul_store/lae/hard_drives/index.html.erb
+++ b/app/views/pul_store/lae/hard_drives/index.html.erb
@@ -1,8 +1,6 @@
-<h1>Listing Hard Drives</h1>
+<h1>Manage Drives</h1>
 
-<%= render 'quick_lookup' %>
-
-<table>
+<table class="table table-striped">
   <thead>
     <tr>
       <th>Barcode</th>
@@ -20,13 +18,13 @@
         <td><%= hard_drive.barcode %></td>
         <td><%= hard_drive.state %></td>
         <td><%= hard_drive.box ? hard_drive.box.barcode : "None" %></td>
-        <td><%= link_to 'Show', hard_drive %></td>
-        <td><%= link_to 'Edit', edit_lae_hard_drive_path(hard_drive) %></td>
-        <td><%= link_to 'Destroy', hard_drive, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Show', hard_drive, class: "btn btn-info" %></td>
+        <td><%= link_to 'Edit', edit_lae_hard_drive_path(hard_drive), class: "btn btn-info" %></td>
+        <td><%= link_to 'Destroy', hard_drive, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-info" %></td>
       </tr>
       </tr>
     <% end %>
   </tbody>
 </table>
 
-<%= link_to 'New Hard Drive', new_lae_hard_drive_path %>
+<%= link_to 'New Hard Drive', new_lae_hard_drive_path, class: "btn btn-info" %>
