--- a/app/views/records/_edit_field.html.erb
+++ b/app/views/records/_edit_field.html.erb
@@ -1,11 +1,11 @@
 <% render_req ||= true # render_req is true for single file edit, false for batch edit%>
-<div class="control-group">
+<div class="form-group">
   <% vals =  f.object[key] %>
   <% if render_req && f.object.required?(key) %>
     <% tmp = '<span class="error">*</span>' + field_label(key) %>
-    <%= f.label key, tmp.html_safe, :class=>"control-label"  %>
+    <%= f.label key, tmp.html_safe, :class=>"control-label col-xs-3"  %>
   <% else %>
-    <%= f.label key, field_label(key), :class=>"control-label"%>
+    <%= f.label key, field_label(key), :class=>"control-label col-xs-3"%>
   <% end %>
   <% if vals.size == 0 %>
     <%= render_edit_field_partial(key, f:f,  v: "", index: 0, render_req: render_req) %>
