--- a/app/views/records/edit_fields/_default.html.erb
+++ b/app/views/records/edit_fields/_default.html.erb
@@ -1,6 +1,6 @@
-      <div class="controls" <%  if index == 0 %> id="additional_<%= key.to_s %>_clone" <% end %>>
+      <div class="col-xs-7 col-xs-offset-3" <%  if index == 0 %> id="additional_<%= key.to_s %>_clone" <% end %>>
         <% required = render_req && (index == 0) && f.object.required?(key) %>
-        <%= text_field_tag "#{ActiveModel::Naming.param_key(f.object)}[#{key.to_s}][]", v,  :id => "#{ActiveModel::Naming.param_key(f.object)}_#{key.to_s}", :class => "input-large", :required => required  %>
+        <%= text_field_tag "#{ActiveModel::Naming.param_key(f.object)}[#{key.to_s}][]", v,  :id => "#{ActiveModel::Naming.param_key(f.object)}_#{key.to_s}", :class => "form-control", :required => required  %>
         <% unless f.object.class.unique?(key) %>
           <%= render :partial=>"records/edit_fields/suffix", :locals=>{key: key, index: index} %>
         <% end %>
