--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,9 +1,8 @@
-<footer class="footer">
-<div class="row well">
-	<div class="span12">
-		<div class="pull-right">
-			<p>&copy; Trustees of Princeton University</p>
-		</div>
-	</div>
-</div>
+<footer>
+  <div class="row">
+  	<div class="col-md-3 col-md-offset-9">
+  		<p>&copy; <%= Date.today.year %> Trustees of Princeton University</p>
+      <p>Princeton University Library</p>
+  	</div>
+  </div>
 </footer>
