--- a/app/views/shared/_header_navbar.html.erb
+++ b/app/views/shared/_header_navbar.html.erb
@@ -1,25 +1,30 @@
-<div id="header-navbar-fixed-top" class="navbar navbar-fixed-top">
-     <div class="navbar-inner">
-            <div class="container">
-              <div class="row">
-                      <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-                      <span class="icon-bar"></span>
-                      <span class="icon-bar"></span>
-                      <span class="icon-bar"></span>
-                    </a>
-<div class="span3">
-                    <%= link_to application_name, root_path, :class => "brand" %>
-                  </div>
-                  <div class="span6 clearfix" id="searchbar">         
-                                    <%= render_search_bar  %>
-                  </div>
-
-                  <div class="span3 nav-collapse">
-                    <%= render :partial=>'/user_util_links' %>
-                  
-                  </div>
-
-        </div>
-        </div>
-   </div>
+<div class="navbar navbar-default navbar-static-top navbar-inverse"> 
+  <div class="container">  
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#user-util-collapse">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <%= image_tag("logos/pul-logo-oneline-300-black.jpg") %>
+      </div>
+      <div class="collapse navbar-collapse">
+        <%= render :partial=>'/user_util_links' %>                
+      </div>
+  </div>
 </div>
+  <div class="jumbotron">
+    <div class="container">
+      <div class="col-md-3">
+          <%= link_to application_name, root_path, :class => "brand" %>
+       </div>
+    </div>
+  </div>
+  <div class="navbar navbar-default" role="navigation">
+    <div class="container">
+      <div class="navbar-right col-sm-4 col-md-4" id="searchbar">         
+          <%= render_search_bar  %>
+        </div>
+      </div>
+  </div>
