--- a/app/views/shared/lae/_start_new_widget.html.erb
+++ b/app/views/shared/lae/_start_new_widget.html.erb
@@ -1,3 +1,3 @@
     <% if can?(:create, @box) %>
-      <%= link_to "Start a New #{controller_name.classify}", url_for(only_path: false, action: 'new' ), class: 'btn btn-success btn-lg lae-new pull-right' %>
+      <%= link_to "Start a New #{controller_name.classify}", url_for(only_path: false, action: 'new' ), class: 'btn btn-success btn-sm lae-new pull-right' %>
     <% end %>
