--- a/app/views/shared/lae/_user_util_links.html.erb
+++ b/app/views/shared/lae/_user_util_links.html.erb
@@ -1,9 +1,18 @@
   <% if has_user_authentication_provider? %>
-    <div class="util-links-login">
+    <ul class="nav navbar-nav pull-right">
       <% if current_user %>
-        <%= link_to t('blacklight.header_links.logout'), destroy_user_session_path %> <%= "[#{ link_to current_user, edit_user_registration_path }]".html_safe unless current_user.to_s.blank? %>
-      <% else %>
-        <%= link_to t('blacklight.header_links.login'), new_user_session_path %>
+      <li>
+        <%= link_to t('blacklight.header_links.logout'), destroy_user_session_path %>
+      </li>
+      <% unless current_user.to_s.blank? -%>
+      <li>
+        <%= link_to current_user, edit_user_registration_path %>
+      </li>
       <% end %>
-    </div>
+      <% else %>
+      <li>
+        <%= link_to t('blacklight.header_links.login'), new_user_session_path %>
+      </li>
+      <% end %>
+      </ul>
   <% end %>
