Adds an image request helper. Closes #217

--- a/config/pul_store.yml.tmpl
+++ b/config/pul_store.yml.tmpl
@@ -7,6 +7,7 @@ defaults: &defaults
   id_namespace: puls
   lae_recap_code: rcpxr
   image_server_store: /tmp/fake_image_store
+  image_server_base: http://libimages.princeton.edu/loris
   jp2_recipes:
     default_color: >
       -rate 2.4,1.48331273,.91673033,.56657224,.35016049,.21641118,.13374944,.08266171 
