--- a/app/views/pul_store/lae/folders/edit.html.erb
+++ b/app/views/pul_store/lae/folders/edit.html.erb
@@ -2,7 +2,7 @@
 <div class="row">
 <%= render :partial => 'breadcrumb' %>
 </div>
-<div class="row well">
+<div class="row well" data-no-turbolink>
   <%= render 'form' %>
 </div>
 
