--- a/app/views/shared/lae/_header_navbar.html.erb
+++ b/app/views/shared/lae/_header_navbar.html.erb
@@ -21,8 +21,8 @@
       <li class="dropdown">
           <a class="dropdown-toggle" data-toggle="dropdown"><%= fa_icon 'dropbox lg' %> Manage Boxes<b class="caret"></b></a>
         <ul class="dropdown-menu">
-          <li><a href="/lae/boxes">Browse</a></li>
-          <li><a href="/lae/boxes/new">Add New</a></li>
+          <li><a href="/lae/boxes">Browse All</a></li>
+          <li><a href="/lae/boxes/new">New Box</a></li>
         </ul>
       </li>
       <li><a href="/lae/folders"><%= fa_icon 'folder lg' %> Manage Folders</a></li>
