added -quiet param to jp2 recipes

--- a/config/pul_store.yml.tmpl
+++ b/config/pul_store.yml.tmpl
@@ -17,6 +17,7 @@ defaults: &defaults
       -double_buffering 10 
       -num_threads 4 
       -no_weights 
+      -quiet
       Clevels=6 
       Clayers=8 
       Cblk=\{64,64\} 
@@ -32,6 +33,7 @@ defaults: &defaults
       -double_buffering 10 
       -num_threads 4 
       -no_weights 
+      -quiet
       Clevels=6 
       Clayers=8 
       Cblk=\{64,64\} 
