Set defaults for lae sort title filing

--- a/config/pul_store.yml.tmpl
+++ b/config/pul_store.yml.tmpl
@@ -5,6 +5,27 @@ defaults: &defaults
   voyager_datasource: http://diglib.princeton.edu/tools/v2m/
   pulfa_datasource: http://findingaids.princeton.edu/collections/
   id_namespace: puls
+  lae_sort_title_filters:
+    - lang: English
+      articles: 
+        - the
+        - a
+        - and
+    - lang: Spanish
+      articles:
+        - el
+        - la
+        - los
+        - las
+        - o
+        - os
+    - lang: Portuguese
+      articles:  
+        - as
+        - um
+        - uns
+        - uma
+        - umas
   lae_recap_code: rcpxr
   lae_rights_boilerplate: "This digital reproduction is intended to support research, teaching, and private study. Users are responsible for determining any copyright questions."
 
