Add Open Seadragon
First Attempt at Image Display with openseadragon gem

--- a/app/views/pul_store/lae/folders/_page_preview.html.erb
+++ b/app/views/pul_store/lae/folders/_page_preview.html.erb
@@ -1,10 +1,7 @@
 <h2>Images</h2>
 <% if !@pages_list.blank? %>
-  <div class="col-xs-12">
-    <%= button_to "View Images in New Window", '#', class: "btn btn-default" %>
-    <%= fa_icon "external-link" %>
-  </div>
-  <img href="<%= pul_store_page_path(@pages_list[0]['id']) %>" class="thumbnail"
+  <%= openseadragon_picture_tag pul_store_iif_path(@pages_list[0]['id']) %>
+  <img href="<%= pul_store_iif_path(@pages_list[0]['id']) %>" class="thumbnail"
   alt="<%= @pages_list[0]['title'] %>" >
 <% else %>
   <div>No Images Assigned Yet</div>
