--- a/app/views/pul_store/lae/folders/_page_preview.html.erb
+++ b/app/views/pul_store/lae/folders/_page_preview.html.erb
@@ -1,8 +1,9 @@
 <h2>Images</h2>
 <% if !@pages_list.blank? %>
-  <%= openseadragon_picture_tag pul_store_iif_path(@pages_list[0]['id']) %>
-  <img href="<%= pul_store_iif_path(@pages_list[0]['id']) %>" class="thumbnail"
-  alt="<%= @pages_list[0]['title'] %>" >
+  <%= openseadragon_picture_tag pul_store_iiif_path(@pages_list[0]['id'], { size: "!600,400" }),  pul_store_iiif_info_path(@pages_list[0]['id'])%>
+
+  <img src="<%= pul_store_iiif_path(@pages_list[0]['id'], { size: "!600,400" }) %>"
+       alt="<%= @pages_list[0]['desc_metadata__display_label_ssm'] %>" />
 <% else %>
   <div>No Images Assigned Yet</div>
 <% end %>
